--- a/app.scss
+++ b/app.scss
@@ -282,6 +282,7 @@ a:hover{
       line-height: 24px;
     }
     .dropdown {
+      user-select: none;
       display: flex;
       align-items: center;
       gap: 8px;
@@ -335,13 +336,14 @@ a:hover{
     }
   }
 }
+
 .inactive{
   color: #CFE8B0;
 }
 
 .top-product {
   padding: 45px 0;
-  background-color: #cfe8b0;
+  background: rgba(207, 232, 176, 0.17);
   margin-bottom: 87px;
   .top-product-head {
     display: flex;
@@ -363,6 +365,12 @@ a:hover{
     .more:hover{
       opacity: 0.8;
     }
+  }
+  &-item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 
   &-title {
@@ -483,6 +491,8 @@ a:hover{
     }
     img {
       margin-top: 12px;
+      transform: translateX(6px);
+
     }
   }
 }
@@ -568,7 +578,7 @@ a:hover{
   margin-bottom: 60px;
   scroll-behavior: smooth;
   .item {
-    width: 15%;
+    width: 20%;
     flex: none;
     .name {
       text-align: center;
@@ -603,6 +613,9 @@ a:hover{
 /* mobile */
 
 @media screen and (max-width: 767.98px) {
+  .slider{
+    margin-top: 16px;
+  }
   .pre-header{
     .container{
     }
@@ -633,7 +646,7 @@ a:hover{
     }
     ul {
       z-index: 9;
-      top: 40px;
+      top: 20px;
       position: absolute;
       visibility: unset;
       display: flex;
@@ -703,6 +716,7 @@ a:hover{
   }
   .categories{
     display: none;
+    padding: 10px 0;
   }
   .section-title{
     padding: 12px 16px;
@@ -722,17 +736,17 @@ a:hover{
         font-size: 5px;
       }
       img {
-        width: 15px;
+        width: 10px;
         font-size: 10px;
       }
     }
     
     .select-language-btn {
       padding: 3px;
-      width: 100px;
+      width: 80px;
       img{
-        width: 20px;
-        height: 20px;
+        width: 16px;
+        height: 16px;
       }
       .text {
         font-size: 5px;
@@ -781,29 +795,39 @@ a:hover{
     }
   }
   .slider {
+    margin-bottom: 40px;
     .item {
-      width: 30%;
+      width: 40%;
     }
   }
   .section-title {
+    margin-top: 20px;
     h1 {
-      font-size: 18px;
+      font-size: 17px;
+      line-height: 22px;
     }
     .more {
       &:hover{
         opacity: 0.8;
       }
-      font-size: 18px;
+      font-size: 16px;
       transition: 0.2s ease;
     }
   }
   .content {
     .list {
+      margin-bottom: 40px;
       gap: 20px;
       column-gap: 20px;
       justify-content: space-between;
+      margin-top: 16px;
       .item {
         width: 45%;
+        .sale{
+          font-size: 8px;
+          width: 32px;
+          height: 20px;
+        }
         .price {
           font-size: 10px;
         }
@@ -820,7 +844,7 @@ a:hover{
     .top-product-title{
       gap: 5px;
       p{
-        font-size: 21px;
+        font-size: 18px;
       }
     }
     .top-product-list {
@@ -891,11 +915,24 @@ a:hover{
   }
 }
 
-
+.width-100{
+  width: unset;
+}
 /* tablet */
 @media screen and (min-width: 768px) and (max-width: 1023.98px) {
+  .width-100{
+    width: 100% !important;
+  }
+  .top-product{
+    .top-product-title{
+      p{
+        font-size: 20px;
+      }
+    }
+  }
   .section-title {
     padding: 16px 20px;
+    margin-top: 25px;
     h1 {
       font-size: 14px;
     }
@@ -944,15 +981,26 @@ a:hover{
     }
   }
   .categories{
-   
+    padding: 18px 0;
+  }
+  .slider{
+    margin-top: 25px;
+    margin-bottom: 50px;
   }
   .content {
     .list {
+      margin-bottom: 50px;
+      margin-top: 25px;
       gap: 25px;
       column-gap: 10px;
       justify-content: space-between;
       .item {
-        width: calc(25% - 10px);
+        width: calc(32% - 10px);
+        .sale{
+          font-size: 12px;
+          width: 44px;
+          height: 29px;
+        }
         .price {
           font-size: 12px;
         }
@@ -1002,6 +1050,11 @@ a:hover{
     .flex-column{
       align-items: center;
     }
+    .returns{
+      p{
+        font-size: 13px;
+      }
+    }
     .container {
       display: flex;
       flex-direction: column;
@@ -1028,8 +1081,19 @@ a:hover{
     }
   }
 }
+.list {
+  .item:nth-child(4n){
+  }
+}
 
+.item.only-pc{
+  width: 100%;
+  flex: 1;
+}
 //small pc
+@media screen and (min-width: 1600px){
+  
+}
 @media screen and (min-width: 1024px) and (max-width: 1280px) {
   .banner {
     &-heading {
@@ -1044,8 +1108,10 @@ a:hover{
       }
       &-visit,
       &-link {
+        padding: 8px 10px;
+
         .text {
-          font-size: 14px;
+          font-size: 11px;
         }
       }
     }
