--- a/app.css
+++ b/app.css
@@ -672,8 +672,15 @@ a:hover {
   .section-title {
     padding: 12px 16px;
   }
+  .header .btns-wrap {
+    align-items: center;
+  }
   .header .btns-wrap .sign-up-btn {
     width: 80px;
+    height: 32px;
+  }
+  .header .btns-wrap .sign-in-btn, .header .btns-wrap .sign-up-btn {
+    font-size: 14px;
   }
   .pre-header-contact {
     display: flex;
