--- a/app.scss
+++ b/app.scss
@@ -29,7 +29,7 @@ img {
   overflow: hidden;
   position: relative;
 }
-.container {
+.container-al {
   padding: 0 8.8%;
 }
 .section-title {
@@ -65,7 +65,7 @@ img {
     cursor: pointer;
   }
 }
-a:hover{
+a:hover {
   opacity: 0.6;
 }
 .d-flex {
@@ -92,7 +92,7 @@ a:hover{
   padding: 10px 0;
   background-color: #f3f4f4;
 
-  .container {
+  .container-al {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -179,7 +179,7 @@ a:hover{
   /* Neutral/5 */
   padding: 16px 0;
   border-bottom: 1px solid #f3f4f4;
-  .container {
+  .container-al {
     display: flex;
     align-items: center;
   }
@@ -234,7 +234,6 @@ a:hover{
       border-radius: 8px;
       color: #fff;
       width: 99px;
-      height: 20px;
 
       /* Primary/02 */
       display: flex;
@@ -287,7 +286,7 @@ a:hover{
       align-items: center;
       gap: 8px;
       position: relative;
-      
+
       cursor: pointer;
       z-index: 99;
       i {
@@ -337,8 +336,8 @@ a:hover{
   }
 }
 
-.inactive{
-  color: #CFE8B0;
+.inactive {
+  color: #cfe8b0;
 }
 
 .top-product {
@@ -357,16 +356,16 @@ a:hover{
       font-weight: 500;
       font-size: 18px;
       line-height: 28px;
-      &:hover{
+      &:hover {
         opacity: 0.8;
       }
       transition: 0.2s ease;
     }
-    .more:hover{
+    .more:hover {
       opacity: 0.8;
     }
   }
-  &-item{
+  &-item {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -377,7 +376,7 @@ a:hover{
     display: flex;
     align-items: center;
     gap: 15px;
-    img{
+    img {
       width: 30px;
       height: 30px;
     }
@@ -396,22 +395,20 @@ a:hover{
     img {
       object-fit: cover;
       max-width: 100%;
-        height: 110px;
-        object-fit: contain;
-     
+      height: 110px;
+      object-fit: contain;
     }
     p {
       font-size: 14px;
       text-align: center;
     }
   }
-  
 }
 
 .footer {
   padding: 36px 0 41px;
   background-color: #f3f4f4;
-  .container {
+  .container-al {
     display: flex;
     justify-content: space-between;
   }
@@ -492,7 +489,6 @@ a:hover{
     img {
       margin-top: 12px;
       transform: translateX(6px);
-
     }
   }
 }
@@ -602,10 +598,10 @@ a:hover{
   display: none;
 }
 
-.mobile-categories{
+.mobile-categories {
   display: none;
 }
-.mobile-cate-btn{
+.mobile-cate-btn {
   display: none;
 }
 //pc
@@ -613,34 +609,34 @@ a:hover{
 /* mobile */
 
 @media screen and (max-width: 767.98px) {
-  .slider{
+  .slider {
     margin-top: 16px;
   }
-  .pre-header{
-    .container{
+  .pre-header {
+    .container-al {
     }
-    &-contact{
-      .text{
+    &-contact {
+      .text {
         font-size: 10px;
       }
-      .select-language-btn{
-        .text{
+      .select-language-btn {
+        .text {
           font-size: 10px;
         }
       }
     }
   }
-  .mobile-cate-btn{
+  .mobile-cate-btn {
     display: block;
     margin-top: 20px;
   }
-  .mobile-categories{
+  .mobile-categories {
     display: block;
     position: relative;
     opacity: 0;
     visibility: hidden;
     transition: 0.2s ease-in-out;
-    &.active{
+    &.active {
       visibility: visible;
       opacity: 1;
     }
@@ -666,7 +662,7 @@ a:hover{
         align-items: center;
         gap: 8px;
         position: relative;
-        
+
         cursor: pointer;
         z-index: 99;
         i {
@@ -691,7 +687,7 @@ a:hover{
           background-color: #fff;
           border: 1px solid #ccc;
           gap: 10px;
-  
+
           li {
             font-weight: 400;
             font-size: 10px;
@@ -702,7 +698,7 @@ a:hover{
           }
         }
       }
-  
+
       .dropdown:hover {
         .sub-dropdown {
           z-index: 999;
@@ -714,22 +710,22 @@ a:hover{
       }
     }
   }
-  .categories{
+  .categories {
     display: none;
     padding: 10px 0;
   }
-  .section-title{
+  .section-title {
     padding: 12px 16px;
   }
-  .header{
-    .btns-wrap{
+  .header {
+    .btns-wrap {
       align-items: center;
-      .sign-up-btn{
+      .sign-up-btn {
         width: 80px;
-        height: 32px;
-
+        height: 20px;
       }
-      .sign-in-btn,.sign-up-btn{
+      .sign-in-btn,
+      .sign-up-btn {
         font-size: 14px;
       }
     }
@@ -746,23 +742,22 @@ a:hover{
         font-size: 10px;
       }
     }
-    
+
     .select-language-btn {
       padding: 3px;
       width: 80px;
-      img{
+      img {
         width: 16px;
         height: 16px;
       }
       .text {
         font-size: 5px;
-        i{
+        i {
           font-size: 5px;
-
         }
       }
     }
-    .container {
+    .container-al {
     }
   }
   .banner {
@@ -775,15 +770,15 @@ a:hover{
       left: 300px;
     } */
   }
-  .categories{
-    ul{
-      li{
+  .categories {
+    ul {
+      li {
         font-size: 15px;
       }
     }
   }
   .header {
-    .container {
+    .container-al {
       flex-direction: column;
       gap: 20px;
     }
@@ -792,7 +787,7 @@ a:hover{
     }
   }
   .categories {
-    .container {
+    .container-al {
       ul {
         flex-wrap: wrap;
         gap: 33px;
@@ -813,7 +808,7 @@ a:hover{
       line-height: 22px;
     }
     .more {
-      &:hover{
+      &:hover {
         opacity: 0.8;
       }
       font-size: 16px;
@@ -829,7 +824,7 @@ a:hover{
       margin-top: 16px;
       .item {
         width: 45%;
-        .sale{
+        .sale {
           font-size: 8px;
           width: 32px;
           height: 20px;
@@ -846,10 +841,10 @@ a:hover{
       }
     }
   }
-  .top-product{
-    .top-product-title{
+  .top-product {
+    .top-product-title {
       gap: 5px;
-      p{
+      p {
         font-size: 18px;
       }
     }
@@ -857,24 +852,24 @@ a:hover{
       flex-wrap: nowrap;
       overflow: scroll;
       gap: 3px;
-      &::-webkit-scrollbar{
+      &::-webkit-scrollbar {
         display: none;
       }
       p {
         font-size: 9px;
       }
-     .top-product-item{
-      flex: none;
-      width: 30%;
-     }
+      .top-product-item {
+        flex: none;
+        width: 30%;
+      }
     }
   }
-  
+
   .footer {
-    .footer-text{
+    .footer-text {
       font-size: 12px;
     }
-    .container {
+    .container-al {
       display: flex;
       flex-direction: column;
       gap: 20px;
@@ -887,18 +882,18 @@ a:hover{
         flex-wrap: wrap;
 
         justify-content: center;
-        img{
+        img {
           width: 50px;
         }
       }
-      .logo-2{
+      .logo-2 {
         width: 70px;
       }
       .right {
         display: flex;
         flex-direction: column;
         gap: 20px;
-        .dangky-img{
+        .dangky-img {
           width: 200px;
         }
       }
@@ -921,23 +916,23 @@ a:hover{
   }
 }
 
-.width-100{
+.width-100 {
   width: unset;
 }
 /* tablet */
 @media screen and (min-width: 768px) and (max-width: 1023.98px) {
-  .width-100{
+  .width-100 {
     width: 100% !important;
   }
-  .top-product{
-    .top-product-title{
-      p{
+  .top-product {
+    .top-product-title {
+      p {
         font-size: 20px;
       }
     }
   }
   .section-title {
-    padding: 16px 20px;
+    padding: 10px 20px;
     margin-top: 25px;
     h1 {
       font-size: 14px;
@@ -951,45 +946,49 @@ a:hover{
       gap: 18px;
     }
   }
-  .pre-header{
-    .container{
+  .pre-header {
+    .container-al {
     }
-    &-contact{
-      .text{
+    &-contact {
+      gap: 10px;
+      .text {
         font-size: 10px;
       }
-      .select-language-btn{
-        .text{
+      .select-language-btn {
+        width: 200px;
+        .text {
           font-size: 10px;
         }
       }
     }
   }
-  .header{
-    .logo{
+  .header {
+    .logo {
       width: 50px;
     }
-    .search-bar{
+    .search-bar {
       gap: 8px;
       margin-left: 10px;
       margin-right: 10px;
-      .search-icon{
+      .search-icon {
         width: 62px;
       }
     }
-    .btns-wrap{
-      .sign-in-btn, .sign-up-btn{
-        font-size: 16px;
+    .btns-wrap {
+      .sign-in-btn,
+      .sign-up-btn {
+        font-size: 13px;
+        padding: 6px;
       }
-      .sign-up-btn{
+      .sign-up-btn {
         width: 70px;
       }
     }
   }
-  .categories{
+  .categories {
     padding: 18px 0;
   }
-  .slider{
+  .slider {
     margin-top: 25px;
     margin-bottom: 50px;
   }
@@ -1002,11 +1001,11 @@ a:hover{
       justify-content: space-between;
       .item {
         width: calc(32% - 10px);
-        img{
+        img {
           max-height: 400px;
           object-fit: cover;
         }
-        .sale{
+        .sale {
           font-size: 12px;
           width: 44px;
           height: 29px;
@@ -1043,9 +1042,9 @@ a:hover{
   }
   .categories {
     ul {
-      gap: 15px;
+      gap: 8px;
       li {
-        font-size: 13px;
+        font-size: 12px;
       }
     }
   }
@@ -1057,15 +1056,15 @@ a:hover{
     }
   }
   .footer {
-    .flex-column{
+    .flex-column {
       align-items: center;
     }
-    .returns{
-      p{
+    .returns {
+      p {
         font-size: 13px;
       }
     }
-    .container {
+    .container-al {
       display: flex;
       flex-direction: column;
       gap: 20px;
@@ -1075,7 +1074,7 @@ a:hover{
         width: 100%;
       }
     }
-    .footer-text{
+    .footer-text {
       font-size: 12px;
     }
   }
@@ -1092,17 +1091,16 @@ a:hover{
   }
 }
 .list {
-  .item:nth-child(4n){
+  .item:nth-child(4n) {
   }
 }
 
-.item.only-pc{
+.item.only-pc {
   width: 100%;
   flex: 1;
 }
 //small pc
-@media screen and (min-width: 1600px){
-  
+@media screen and (min-width: 1600px) {
 }
 @media screen and (min-width: 1024px) and (max-width: 1280px) {
   .banner {
@@ -1110,7 +1108,14 @@ a:hover{
       font-size: 45px;
     }
   }
-
+  .categories{
+    ul{
+      gap: 30px;
+      li{
+        font-size: 16px;
+      }
+    }
+  }
   .footer {
     .returns {
       p {
@@ -1137,19 +1142,12 @@ a:hover{
     h1 {
       font-size: 18px;
     }
-    .more{
+    .more {
       font-size: 18px;
     }
   }
 
-  .categories {
-    ul {
-      gap: 40px;
-      li {
-        font-size: 17px;
-      }
-    }
-  }
+
 
   .content {
     .list {
